test/expected/declare_avi.out
declare x as array * of int
        ^
9: error: variable length arrays are illegal outside of function parameters
